@startuml

package Aws {
  class EC2::Client
}

package EC2 {
  Interface VpcInterface
}

Interface CertificationHelper
Interface ConfigurationHelper

package VPC {
  class VpcDirector {
    + builder
    create()
    destroy()
  }
  class VpnDirector {
    + builder
    create()
    destroy()
  }

  VpcApiGateway -u-> EC2::Client
  CertificationHelper <|-- VpcApiGateway
  ConfigurationHelper <|-- Configuration

  VpcInterface <|-r- Vpc
  Vpc "1" *-u- Configuration
  Vpc "1" *-u- VpcApiGateway
  Vpc "1" *-r- "1..*" Subnet
  Vpc "1" *-r- "1" InternetGateway
  Vpc "1" *-d- "1..*" RouteTable
  Vpc <|-- SimpleVpc
  Vpc <|-- StandardVpc
  VpcDirector *-r- Vpc
  VpnDirector *-- Vpn
  Vpn "1" *-- "1..*" CustomerGateway
  Vpn "1" *-- "1" VpnGateway
  Vpn "1" *-- "1..*" VpnConnection
  Vpn "1" *-r- "1..*" RouteTable
  Vpn "*" -u-> "1" Vpc


}

@enduml